# xcffib

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  cabal.config  pyproject.toml  requirements.txt  setup.cfg  setup.py  xcffib.cabal
.github/workflows/: ci.yaml  release.yaml
debian/: changelog  control  copyright  gbp.conf  license-reconcile.yml  python3-xcffib.install  rules  watch
debian/patches/: language-python.patch  series
generator/: xcffibgen.hs
generator/Data/XCB/Python/: AST.hs  Parse.hs  PyHelpers.hs
module/: __init__.py  ffi.py  ffi_build.py  testing.py  wrappers.py  xcb.py
test/: GeneratorTests.hs  PyHelpersTests.hs  conftest.py  test_connection.py  test_crazy_window_script.py  test_fakeinput.py  test_mode.sh  test_python_code.py  test_render.py  test_xkb.py  testing.py
test/generator/: action.py  action.xml  enum.py  enum.xml  error.py  error.xml  event.py  event.xml  eventstruct.py  eventstruct.xml  no_sequence.py  randr.py  randr.xml  record.py  record.xml  render.py  render.xml  render_1.7.py  render_1.7.xml  request.py  request.xml  request_reply.py  struct.py  switch.py  switch.xml  type_pad.py  union.py  xinput.xml  xproto_1.7.py  xproto_1.7.xml
tests/: GeneratorTests.hs  PyHelpersTests.hs  flake8.cfg  test_connection.py  test_crazy_window_script.py  test_fakeinput.py  test_ffi.py  test_list.py  test_python_code.py  testing.py
tests/generator/: enum.py  error.py  event.py  no_sequence.py  no_sequence.xml  render.py  render_1.7.py  request.py  request_reply.py  request_reply.xml  struct.py  struct.xml  switch.py  type_pad.py  type_pad.xml  union.py  union.xml  xproto_1.7.py
xcffib/: .__init__.py.swp  __init__.py  ffi.py
