[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xcffib"
version = "1.11.2"
description = "xcffib is the XCB binding for python"
readme = "README.md"
keywords = ["xcb", "cffi", "x11", "x", "windows"]
license = {text = "Apache License 2.0"}
authors = [
    {name = "Tycho Andersen", email = "tycho@tycho.pizza"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "cffi>=1.1.0; python_implementation != 'PyPy'",
]
requires-python = ">=3.10"

[project.urls]
Homepage = "http://github.com/tych0/xcffib"

[tool.setuptools.packages.find]
where = ["."]
include = ["xcffib*"]

[tool.setuptools.package-data]
xcffib = ["py.typed"]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
]
