name:                xcffib
version:             0.2.4
synopsis:            A cffi-based python binding for X
homepage:            http://github.com/tych0/xcffib
license:             OtherLicense
license-file:        LICENSE
author:              Tycho Andersen
maintainer:          Tycho Andersen <tycho@tycho.ws>
category:            X11
build-type:          Simple
cabal-version:       >=1.8
bug-reports:         https://github.com/tych0/xcffib/issues
description: A cffi-based python binding for X, comparable to xpyb
extra-source-files: tests/generator/*.py,
                    tests/generator/*.xml,
                    -- cabal's wildcarding is broken if the filename contains
                    -- extra dots:
                    -- https://github.com/haskell/cabal/issues/784
                    tests/generator/*.7.py,
                    tests/generator/*.7.xml

source-repository head
  type:              git
  location:          git://github.com/tych0/xcffib.git

library
  build-depends: base ==4.*,
                 xcb-types >= 0.7.0,
                 language-python >= 0.5.0,
                 filepath,
                 filemanip,
                 split,
                 containers,
                 mtl >= 2.1,
                 attoparsec,
                 bytestring
  hs-source-dirs: generator
  exposed-modules: Data.XCB.Python.Parse,
                   Data.XCB.Python.PyHelpers
  ghc-options: -Wall

executable xcffibgen
  main-is: xcffibgen.hs
  hs-source-dirs: generator
  build-depends: base ==4.*,
                 xcffib >= 0.1.0,
                 language-python >= 0.5.0,
                 split,
                 xcb-types >= 0.7.0,
                 optparse-applicative >= 0.5,
                 filepath,
                 filemanip,
                 directory >= 1.2,
                 containers,
                 mtl >= 2.1,
                 attoparsec,
                 bytestring
  ghc-options: -Wall

test-suite PyHelpersTests
  hs-source-dirs: tests
  main-is: PyHelpersTests.hs
  type: exitcode-stdio-1.0
  build-depends: base ==4.*,
                 xcffib >= 0.1.0,
                 language-python >= 0.5.0,
                 HUnit,
                 test-framework,
                 test-framework-hunit

test-suite GeneratorTests.hs
  hs-source-dirs: tests
  main-is: GeneratorTests.hs
  type: exitcode-stdio-1.0
  build-depends: base ==4.*,
                 xcffib >= 0.1.0,
                 xcb-types >= 0.7.0,
                 language-python >= 0.5.0,
                 HUnit,
                 test-framework,
                 test-framework-hunit,
                 filepath
