name:                xcffib
version:             0.9.0
synopsis:            A cffi-based python binding for X
homepage:            http://github.com/tych0/xcffib
license:             OtherLicense
license-file:        LICENSE
author:              Tycho Andersen
maintainer:          Tycho Andersen <tycho@tycho.ws>
category:            X11
build-type:          Simple
cabal-version:       >=1.8
bug-reports:         https://github.com/tych0/xcffib/issues
description: A cffi-based python binding for X, comparable to xpyb
extra-source-files: test/generator/*.py,
                    test/generator/*.xml,
                    -- cabal's wildcarding is broken if the filename contains
                    -- extra dots:
                    -- https://github.com/haskell/cabal/issues/784
                    test/generator/*.7.py,
                    test/generator/*.7.xml

source-repository head
  type:              git
  location:          git://github.com/tych0/xcffib.git

library
  build-depends: base ==4.*,
                 xcb-types >= 0.9.0,
                 language-python >= 0.5.6,
                 filepath,
                 filemanip,
                 split,
                 containers,
                 mtl >= 2.1,
                 attoparsec,
                 bytestring,
                 either
  hs-source-dirs: generator
  exposed-modules: Data.XCB.Python.Parse,
                   Data.XCB.Python.PyHelpers
  ghc-options: -Wall

executable xcffibgen
  main-is: xcffibgen.hs
  hs-source-dirs: generator
  build-depends: base ==4.*,
                 xcffib,
                 language-python >= 0.5.6,
                 split,
                 xcb-types >= 0.10.0,
                 optparse-applicative >= 0.13,
                 filepath,
                 filemanip,
                 directory >= 1.2,
                 containers,
                 mtl >= 2.1,
                 attoparsec,
                 bytestring,
                 semigroups,
                 either
  other-modules: Data.XCB.Python.Parse,
                 Data.XCB.Python.PyHelpers
  ghc-options: -Wall

test-suite PyHelpersTests
  hs-source-dirs: test
  main-is: PyHelpersTests.hs
  type: exitcode-stdio-1.0
  build-depends: base ==4.*,
                 xcffib,
                 language-python >= 0.5.6,
                 HUnit,
                 test-framework,
                 test-framework-hunit

test-suite GeneratorTests.hs
  hs-source-dirs: test
  main-is: GeneratorTests.hs
  type: exitcode-stdio-1.0
  build-depends: base ==4.*,
                 xcffib,
                 xcb-types >= 0.10.0,
                 language-python >= 0.5.6,
                 HUnit,
                 test-framework,
                 test-framework-hunit,
                 filepath
