cabal-version:       2.4
name:                xcffib
version:             1.12.0
synopsis:            A cffi-based python binding for X
homepage:            http://github.com/tych0/xcffib
license:             Apache-2.0
license-file:        LICENSE
author:              Tycho Andersen
maintainer:          Tycho Andersen <tycho@tycho.pizza>
category:            X11
build-type:          Simple
bug-reports:         https://github.com/tych0/xcffib/issues
description: A cffi-based python binding for X, comparable to xpyb
extra-source-files: test/generator/*.py,
                    test/generator/*.xml,
                    -- cabal's wildcarding is broken if the filename contains
                    -- extra dots:
                    -- https://github.com/haskell/cabal/issues/784
                    test/generator/*.7.py,
                    test/generator/*.7.xml

source-repository head
  type:              git
  location:          ssh://github.com/tych0/xcffib.git

library
  build-depends: base ==4.*,
                 xcb-types >= 0.15.0 && < 0.16,
                 filepath >= 1.4.2 && < 1.6,
                 filemanip >= 0.3.6 && < 0.4,
                 split >= 0.2.3 && < 0.3,
                 containers >= 0.6.5 && < 0.9,
                 mtl >= 2.2.2 && < 2.4,
                 attoparsec >= 0.14.4 && < 0.15,
                 bytestring >= 0.11.3 && < 0.13,
                 either >= 5.0.2 && < 5.1,
                 pretty >= 1.1 && < 1.2
  hs-source-dirs: generator
  exposed-modules: Data.XCB.Python.Parse,
                   Data.XCB.Python.PyHelpers
                   Data.XCB.Python.AST
  ghc-options: -Wall
  default-language: Haskell2010

executable xcffibgen
  main-is: xcffibgen.hs
  hs-source-dirs: generator
  build-depends: base ==4.*,
                 xcffib,
                 xcb-types >= 0.15.0 && < 0.16,
                 filepath >= 1.4.2 && < 1.6,
                 filemanip >= 0.3.6 && < 0.4,
                 split >= 0.2.3 && < 0.3,
                 containers >= 0.6.5 && < 0.9,
                 mtl >= 2.2.2 && < 2.4,
                 attoparsec >= 0.14.4 && < 0.15,
                 bytestring >= 0.11.3 && < 0.13,
                 either >= 5.0.2 && < 5.1,
                 pretty >= 1.1 && < 1.2,
                 directory >= 1.3.6 && < 1.4,
                 optparse-applicative >= 0.18.1 && < 0.20
  other-modules: Data.XCB.Python.Parse,
                 Data.XCB.Python.PyHelpers
                 Data.XCB.Python.AST
  ghc-options: -Wall
  default-language: Haskell2010

test-suite PyHelpersTests
  hs-source-dirs: test
  main-is: PyHelpersTests.hs
  type: exitcode-stdio-1.0
  build-depends: base ==4.*,
                 xcffib,
                 HUnit >= 1.6.2 && < 1.7,
                 test-framework >= 0.8.2 && < 0.9,
                 test-framework-hunit >= 0.3.0 && < 0.4
  default-language: Haskell2010

test-suite GeneratorTests.hs
  hs-source-dirs: test
  main-is: GeneratorTests.hs
  type: exitcode-stdio-1.0
  build-depends: base ==4.*,
                 xcffib,
                 xcb-types >= 0.15.0 && < 0.16,
                 filepath >= 1.4.2 && < 1.6,
                 HUnit >= 1.6.2 && < 1.7,
                 test-framework >= 0.8.2 && < 0.9,
                 test-framework-hunit >= 0.3.0 && < 0.4
  default-language: Haskell2010
